--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             gl_Position = u_MvpMatrix *a_Position;
             vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
             vec4 vertexPosition = u_ModelMatrix * a_Position;
-            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) )
-            float nDotL = max( dot(u_LightDirection, normal ),0.0 );          
+            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
+            float nDotL = max( dot(lightDirection, normal ),0.0 );          
             vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
             vec3 ambient = u_AmbientLight * a_Color.rgb;
             v_Color = vec4( diffuse + ambient ,a_Color.a);
@@ -70,51 +70,25 @@
             var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
             var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
 
-
-            // var u_DiffuseLight = gl.getUniformLocation(gl.program, 'u_DiffuseLight')
             var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
-
-
-            // var u_LightDirection = gl.getUniformLocation(gl.program, 'u_LightDirection')
 
             gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
             // var vpMatrix = new Matrix4()
             gl.uniform3f(u_LightPosition, 2.3, 4.0, 3.5)
             gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
 
-
-            // var lightDirection = new Vector3([0.0, 3.0, 4.0])
-            // lightDirection.normalize()
-            // gl.uniform3fv(u_LightDirection, lightDirection.elements)
-            // gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
-
-            // var currentAngle = 0.0;
             var modelMatrix = new Matrix4()
             var mvpMatrix = new Matrix4()
             var normalMatrix = new Matrix4()
 
             modelMatrix.setRotate(90, 0, 1, 0)
             gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-
-            mvpMatrix.setPerspective(20, canvas.width / canvas.height, 1, 100)
-
-            // modelMatrix.setTranslate(0, 0.9, 0)
-            // modelMatrix.rotate(90, 0, 0, 1)
-
-            // mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
             mvpMatrix.lookAt(6, 6, 14, 0, 0, 0, 0, 1, 0)
-
-
-
             mvpMatrix.multiply(modelMatrix)
-
             gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-
-
             normalMatrix.setInverseOf(modelMatrix)
-
             normalMatrix.transpose()
-
             gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
 
             gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
@@ -169,22 +143,13 @@
 
 
             gl.bindBuffer(gl.ARRAY_BUFFER, null)
-
             var indexBuffer = gl.createBuffer()
-
             if (!indexBuffer) {
                 console.log('Failed to create the buffer object')
                 return -1
             }
-
-
-
-
-
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
-
-
             return indices.length
         }
 
@@ -205,7 +170,6 @@
             gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
 
             gl.enableVertexAttribArray(a_attribute)
-            gl.bindBuffer(gl.ARRAY_BUFFER, null)
             return true
 
         }
