--- a/copy.html
+++ b/copy.html
@@ -15,129 +15,230 @@
     <script src="./lib/cuon-utils.js"></script>
     <script src="./lib/cuon-matrix.js"></script>
     <script>
-        var VSHADER_SOURCE = `
-        attribute vec4 a_Position;
-        attribute vec4 a_Color;
-        attribute vec4 a_Normal;
-        uniform mat4 u_MvpMatrix;
-        uniform mat4 u_ModelMatrix;
-        uniform mat4 u_NormalMatrix;
-        uniform vec3 u_LightColor;
-        uniform vec3 u_LightPosition;    
-        uniform vec3 u_AmbientLight;
-        varying vec4 v_Color;
-        void main(){
-            gl_Position = u_MvpMatrix *a_Position;
-            vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
-            vec4 vertexPosition = u_ModelMatrix * a_Position;
-            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
-            float nDotL = max( dot(lightDirection, normal ),0.0 );          
-            vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
-            vec3 ambient = u_AmbientLight * a_Color.rgb;
-            v_Color = vec4( diffuse + ambient ,a_Color.a);
-        }
-        `
-        var FSHADER_SOURCE = `
-        precision mediump float;
-        varying vec4 v_Color;
-        void main(){            
-            gl_FragColor = v_Color;
-        }
-        `
+        var VSHADER_SOURCE =
+            'attribute vec4 a_Position;\n' +
+            //  'attribute vec4 a_Color;\n' + // Defined constant in main()
+            'attribute vec4 a_Normal;\n' +
+            'uniform mat4 u_MvpMatrix;\n' +
+            'uniform mat4 u_ModelMatrix;\n' +    // Model matrix
+            'uniform mat4 u_NormalMatrix;\n' +   // Transformation matrix of the normal
+            'uniform vec3 u_LightColor;\n' +     // Light color
+            'uniform vec3 u_LightPosition;\n' +  // Position of the light source
+            'uniform vec3 u_AmbientLight;\n' +   // Ambient light color
+            'varying vec4 v_Color;\n' +
+            'void main() {\n' +
+            '  vec4 color = vec4(1.0, 1.0, 1.0, 1.0);\n' + // Sphere color
+            '  gl_Position = u_MvpMatrix * a_Position;\n' +
+            // Calculate a normal to be fit with a model matrix, and make it 1.0 in length
+            '  vec3 normal = normalize(vec3(u_NormalMatrix * a_Normal));\n' +
+            // Calculate world coordinate of vertex
+            '  vec4 vertexPosition = u_ModelMatrix * a_Position;\n' +
+            // Calculate the light direction and make it 1.0 in length
+            '  vec3 lightDirection = normalize(u_LightPosition - vec3(vertexPosition));\n' +
+            // The dot product of the light direction and the normal
+            '  float nDotL = max(dot(lightDirection, normal), 0.0);\n' +
+            // Calculate the color due to diffuse reflection
+            '  vec3 diffuse = u_LightColor * color.rgb * nDotL;\n' +
+            // Calculate the color due to ambient reflection
+            '  vec3 ambient = u_AmbientLight * color.rgb;\n' +
+            // Add the surface colors due to diffuse reflection and ambient reflection
+            '  v_Color = vec4(diffuse + ambient, color.a);\n' +
+            '}\n';
+        // `
+        // attribute vec4 a_Position;
+        // attribute vec4 a_Normal;
+        // uniform mat4 u_MvpMatrix;
+        // uniform mat4 u_ModelMatrix;
+        // uniform mat4 u_NormalMatrix;
+        // uniform vec3 u_LightColor;
+        // uniform vec3 u_LightPosition;    
+        // uniform vec3 u_AmbientLight;
+        // varying vec4 v_Color;
+        // void main(){
+        //     vec4 color = vec4(1.0,1.0,1.0,1.0);
+        //     gl_Position = u_MvpMatrix *a_Position;
+        //     vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
+        //     vec4 vertexPosition = u_ModelMatrix * a_Position;
+        //     vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
+        //     float nDotL = max( dot( normal, lightDirection ),0.0 );          
+        //     vec3 diffuse = u_LightColor * color.rgb*nDotL;
+        //     vec3 ambient = u_AmbientLight * color.rgb;
+        //     v_Color = vec4( diffuse + ambient ,color.a);
+        // }
+        // `
+        var FSHADER_SOURCE = 
+        '#ifdef GL_ES\n' +
+  'precision mediump float;\n' +
+  '#endif\n' +
+  'varying vec4 v_Color;\n' +
+  'void main() {\n' +
+  '  gl_FragColor = v_Color;\n' +
+  '}\n';
+        // `
+        // precision mediump float;
+        // varying vec4 v_Color;
+        // void main(){            
+        //     gl_FragColor = v_Color;
+        // }
+        // `
         function main() {
             var canvas = document.getElementById('example')
-            if (!canvas) {
-                console.log('failed to retrieve the canvas element')
-                return false
-            }
-            var gl = getWebGLContext(canvas)
+            // if (!canvas) {
+            //     console.log('failed to retrieve the canvas element')
+            //     return false
+            // }
+            // var gl = getWebGLContext(canvas)
+            // if (!gl) {
+            //     console.log('Failed to get rending contextfor webgl')
+            // }
+            // if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
+            //     console.log('failed to initialize shaders')
+            //     return
+            // }
+            // var n = initVertexBuffers(gl)
+            // gl.clearColor(0, 0, 0, 1)
+            // gl.enable(gl.DEPTH_TEST)
+
+            // var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
+            // var u_MvpMatrix = gl.getUniformLocation(
+            //     gl.program,
+            //     'u_MvpMatrix'
+            // )
+            // var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
+            // var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
+            // var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
+            // var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
+            // gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8)
+            // gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0)
+            // gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
+
+            // var modelMatrix = new Matrix4()
+            // var mvpMatrix = new Matrix4()
+            // var normalMatrix = new Matrix4()
+            // gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
+            // mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            // mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0)
+            // mvpMatrix.multiply(modelMatrix)
+            // gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+            // normalMatrix.setInverseOf(modelMatrix)
+            // normalMatrix.transpose()
+            // gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
+
+            // gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+
+            // gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_SHORT, 0)
+
+
+
+            // Get the rendering context for WebGL
+            var gl = getWebGLContext(canvas);
             if (!gl) {
-                console.log('Failed to get rending contextfor webgl')
+                console.log('Failed to get the rendering context for WebGL');
+                return;
             }
+
+            // Initialize shaders
             if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
-                console.log('failed to initialize shaders')
-                return
+                console.log('Failed to intialize shaders.');
+                return;
             }
-            var n = initVertexBuffers(gl)
-            gl.clearColor(0.0, 0.0, 0.0, 1.0)
-            gl.enable(gl.DEPTH_TEST)
-            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
-            var u_MvpMatrix = gl.getUniformLocation(
-                gl.program,
-                'u_MvpMatrix'
-            )
-            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
-            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
-            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
 
-            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
+            // Set the vertex coordinates, the color and the normal
+            var n = initVertexBuffers(gl);
+            if (n < 0) {
+                console.log('Failed to set the vertex information');
+                return;
+            }
 
-            gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
-            gl.uniform3f(u_LightPosition, 2.3, 4.0, 3.5)
-            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
+            // Set the clear color and enable the depth test
+            gl.clearColor(0, 0, 0, 1);
+            gl.enable(gl.DEPTH_TEST);
 
-            var modelMatrix = new Matrix4()
-            var mvpMatrix = new Matrix4()
-            var normalMatrix = new Matrix4()
+            // Get the storage locations of uniform variables and so on
+            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix');
+            var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix');
+            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix');
+            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor');
+            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition');
+            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight');
+            if (!u_MvpMatrix || !u_NormalMatrix || !u_LightColor || !u_LightPosition || !u_AmbientLight) {
+                console.log('Failed to get the storage location');
+                return;
+            }
 
-            modelMatrix.setRotate(170, 0, 1, 0)
-            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
-            mvpMatrix.lookAt(4, 6, 14, 0, 0, 0, 0, 1, 0)
-            mvpMatrix.multiply(modelMatrix)
-            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-            normalMatrix.setInverseOf(modelMatrix)
-            normalMatrix.transpose()
-            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
+            // Set the light color (white)
+            gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8);
+            // Set the light direction (in the world coordinate)
+            gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0);
+            // Set the ambient light
+            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2);
 
-            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+            var modelMatrix = new Matrix4();  // Model matrix
+            var mvpMatrix = new Matrix4(); 　 // Model view projection matrix
+            var normalMatrix = new Matrix4(); // Transformation matrix for normals
 
-            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
+            // Pass the model matrix to u_ModelMatrix
+            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements);
+
+            // Calculate the view projection matrix
+            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100);
+            mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0);
+            mvpMatrix.multiply(modelMatrix);
+            // Pass the model view projection matrix to u_MvpMatrix
+            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements);
+
+            // Calculate the matrix to transform the normal based on the model matrix
+            normalMatrix.setInverseOf(modelMatrix);
+            normalMatrix.transpose();
+            // Pass the transformation matrix for normals to u_NormalMatrix
+            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements);
+
+            // Clear color and depth buffer
+            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+            // Draw the cube(Note that the 3rd argument is the gl.UNSIGNED_SHORT)
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_SHORT, 0);
         }
         function initVertexBuffers(gl) {
-            var vertices = new Float32Array([
-                2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, 2.0, // v0-v1-v2-v3 front
-                2.0, 2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, // v0-v3-v4-v5 right
-                2.0, 2.0, 2.0, 2.0, 2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, 2.0, // v0-v5-v6-v1 up
-                -2.0, 2.0, 2.0, -2.0, 2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, // v1-v6-v7-v2 left
-                -2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, -2.0, 2.0, -2.0, -2.0, 2.0, // v7-v4-v3-v2 down
-                2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, -2.0, 2.0, 2.0, -2.0  // v4-v7-v6-v5 back
-            ])
+            var SPHERE_DIV = 13;
+            var i, ai, si, ci;
+            var j, aj, sj, cj;
+            var p1, p2;
+            var positions = [];
+            var indices = [];
 
-            var colors = new Float32Array([
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v1-v2-v3 front
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v3-v4-v5 right
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v5-v6-v1 up
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v1-v6-v7-v2 left
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v7-v4-v3-v2 down
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0　    // v4-v7-v6-v5 back
-            ])
+            for (j = 0; j < SPHERE_DIV; j++) {
+                aj = j * Math.PI / SPHERE_DIV
+                sj = Math.sin(aj)
+                cj = Math.cos(aj)
+                for (i = 0; i < SPHERE_DIV; i++) {
+                    ai = i * 2 * Math.PI / SPHERE_DIV
+                    si = Math.sin(ai)
+                    ci = Math.cos(ai);
+                    positions.push(si * sj)
+                    positions.push(cj)
+                    positions.push(ci * sj)
+                }
+            }
 
-            var normals = new Float32Array([ // Normal
-                0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0,  // v0-v1-v2-v3 front
-                1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0,  // v0-v3-v4-v5 right
-                0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0,  // v0-v5-v6-v1 up
-                -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0,  // v1-v6-v7-v2 left
-                0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0,  // v7-v4-v3-v2 down
-                0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0   // v4-v7-v6-v5 back
-            ]);
+            for (j = 0; j < SPHERE_DIV; j++) {
+                for (i = 0; i < SPHERE_DIV; i++) {
+                    p1 = j * (SPHERE_DIV + 1) + i
+                    p2 = p1 + (SPHERE_DIV + 1)
+                    indices.push(p1)
+                    indices.push(p2)
+                    indices.push(p1 + 1)
+                    indices.push(p1 + 1)
+                    indices.push(p2)
+                    indices.push(p2 + 1)
+                }
+            }
 
 
-            var indices = new Uint8Array([
-                0, 1, 2, 0, 2, 3, // front
-                4, 5, 6, 4, 6, 7, // right
-                8, 9, 10, 8, 10, 11, // up
-                12, 13, 14, 12, 14, 15, // left
-                16, 17, 18, 16, 18, 19, // down
-                20, 21, 22, 20, 22, 23 // back
-            ])
 
-            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
+            if (!initArrayBuffer(gl, 'a_Position', new Float32Array(positions), gl.FLOAT, 3))
                 return -1
-            if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
-                return -1
-
-            if (!initArrayBuffer(gl, 'a_Normal', normals, 3, gl.FLOAT))
+            if (!initArrayBuffer(gl, 'a_Normal', new Float32Array(positions), gl.FLOAT, 3))
                 return -1
 
 
@@ -148,30 +249,36 @@
                 return -1
             }
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
-            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW)
             return indices.length
         }
 
-        function initArrayBuffer(gl, attribute, data, num, type) {
-            var buffer = gl.createBuffer()
+        function initArrayBuffer(gl, attribute, data, type, num) {
+            var buffer = gl.createBuffer();
             if (!buffer) {
-                return false
+                console.log('Failed to create the buffer object');
+                return false;
             }
-            gl.bindBuffer(gl.ARRAY_BUFFER, buffer)
-            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW)
-
-            var a_attribute = gl.getAttribLocation(gl.program, attribute)
-
+            // Write date into the buffer object
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW);
+            // Assign the buffer object to the attribute variable
+            var a_attribute = gl.getAttribLocation(gl.program, attribute);
             if (a_attribute < 0) {
-                return false
+                console.log('Failed to get the storage location of ' + attribute);
+                return false;
             }
+            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0);
+            // Enable the assignment of the buffer object to the attribute variable
+            gl.enableVertexAttribArray(a_attribute);
 
-            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
+            gl.bindBuffer(gl.ARRAY_BUFFER, null);
 
-            gl.enableVertexAttribArray(a_attribute)
-            return true
+            return true;
 
         }
+
+
     </script>
 </body>
 
