--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <script src="./lib/cuon-utils.js"></script>
     <script src="./lib/cuon-matrix.js"></script>
     <script>
-        var VSHADER_SOURCE = `
+        var VSHADER_SOURCE =
+            `
         attribute vec4 a_Position;
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
@@ -37,138 +38,178 @@
             v_Color = vec4( diffuse + ambient ,color.a);
         }
         `
-        var FSHADER_SOURCE = `
+
+        // Fragment shader program
+        var FSHADER_SOURCE =
+            `
         precision mediump float;
         varying vec4 v_Color;
         void main(){            
             gl_FragColor = v_Color;
         }
         `
+
         function main() {
-            var canvas = document.getElementById('example')
-            if (!canvas) {
-                console.log('failed to retrieve the canvas element')
-                return false
-            }
-            var gl = getWebGLContext(canvas)
+            // Retrieve <canvas> element
+            var canvas = document.getElementById('example');
+
+            // Get the rendering context for WebGL
+            var gl = getWebGLContext(canvas);
             if (!gl) {
-                console.log('Failed to get rending contextfor webgl')
+                console.log('Failed to get the rendering context for WebGL');
+                return;
             }
+
+            // Initialize shaders
             if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
-                console.log('failed to initialize shaders')
-                return
+                console.log('Failed to intialize shaders.');
+                return;
             }
-            var n = initVertexBuffers(gl)
-            gl.clearColor(0.0, 0.0, 0.0, 1.0)
-            gl.enable(gl.DEPTH_TEST)
 
-            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
-            var u_MvpMatrix = gl.getUniformLocation(
-                gl.program,
-                'u_MvpMatrix'
-            )
-            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
-            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
-            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
-            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
-            gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8)
-            gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0)
-            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
+            // Set the vertex coordinates, the color and the normal
+            var n = initVertexBuffers(gl);
+            if (n < 0) {
+                console.log('Failed to set the vertex information');
+                return;
+            }
 
-            var modelMatrix = new Matrix4()
-            var mvpMatrix = new Matrix4()
-            var normalMatrix = new Matrix4()
-            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
-            mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0)
-            mvpMatrix.multiply(modelMatrix)
-            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-            normalMatrix.setInverseOf(modelMatrix)
-            normalMatrix.transpose()
-            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
+            // Set the clear color and enable the depth test
+            gl.clearColor(0, 0, 0, 1);
+            gl.enable(gl.DEPTH_TEST);
 
-            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+            // Get the storage locations of uniform variables and so on
+            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix');
+            var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix');
+            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix');
+            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor');
+            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition');
+            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight');
+            if (!u_MvpMatrix || !u_NormalMatrix || !u_LightColor || !u_LightPosition || !u_AmbientLight) {
+                console.log('Failed to get the storage location');
+                return;
+            }
 
-            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
+            // Set the light color (white)
+            gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8);
+            // Set the light direction (in the world coordinate)
+            gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0);
+            // Set the ambient light
+            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2);
+
+            var modelMatrix = new Matrix4();  // Model matrix
+            var mvpMatrix = new Matrix4(); 　 // Model view projection matrix
+            var normalMatrix = new Matrix4(); // Transformation matrix for normals
+
+            // Pass the model matrix to u_ModelMatrix
+            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements);
+
+            // Calculate the view projection matrix
+            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100);
+            mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0);
+            mvpMatrix.multiply(modelMatrix);
+            // Pass the model view projection matrix to u_MvpMatrix
+            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements);
+
+            // Calculate the matrix to transform the normal based on the model matrix
+            normalMatrix.setInverseOf(modelMatrix);
+            normalMatrix.transpose();
+            // Pass the transformation matrix for normals to u_NormalMatrix
+            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements);
+
+            // Clear color and depth buffer
+            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
+
+            // Draw the cube(Note that the 3rd argument is the gl.UNSIGNED_SHORT)
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_SHORT, 0);
         }
-        function initVertexBuffers(gl) {
+
+        function initVertexBuffers(gl) { // Create a sphere
             var SPHERE_DIV = 13;
+
             var i, ai, si, ci;
             var j, aj, sj, cj;
             var p1, p2;
+
             var positions = [];
             var indices = [];
 
-            for (j = 0; j < SPHERE_DIV; j++) {
-                aj = j * Math.PI / SPHERE_DIV
-                sj = Math.sin(aj)
-                cj = Math.cos(aj)
-                for (i = 0; i < SPHERE_DIV; i++) {
-                    ai = i * 2 * Math.PI / SPHERE_DIV
-                    si = Math.sin(ai)
+            // Generate coordinates
+            for (j = 0; j <= SPHERE_DIV; j++) {
+                aj = j * Math.PI / SPHERE_DIV;
+                sj = Math.sin(aj);
+                cj = Math.cos(aj);
+                for (i = 0; i <= SPHERE_DIV; i++) {
+                    ai = i * 2 * Math.PI / SPHERE_DIV;
+                    si = Math.sin(ai);
                     ci = Math.cos(ai);
-                    positions.push(si * sj)
-                    positions.push(cj)
-                    positions.push(ci * sj)
+
+                    positions.push(si * sj);  // X
+                    positions.push(cj);       // Y
+                    positions.push(ci * sj);  // Z
                 }
             }
 
+            // Generate indices
             for (j = 0; j < SPHERE_DIV; j++) {
                 for (i = 0; i < SPHERE_DIV; i++) {
-                    p1 = j * (SPHERE_DIV + 1) + i
-                    p2 = p1 + (SPHERE_DIV + 1)
-                    indices.push(p1)
-                    indices.push(p2)
-                    indices.push(p1 + 1)
-                    indices.push(p1 + 1)
-                    indices.push(p2)
-                    indices.push(p2 + 1)
+                    p1 = j * (SPHERE_DIV + 1) + i;
+                    p2 = p1 + (SPHERE_DIV + 1);
+
+                    indices.push(p1);
+                    indices.push(p2);
+                    indices.push(p1 + 1);
+
+                    indices.push(p1 + 1);
+                    indices.push(p2);
+                    indices.push(p2 + 1);
                 }
             }
 
+            // Write the vertex property to buffers (coordinates and normals)
+            // Same data can be used for vertex and normal
+            // In order to make it intelligible, another buffer is prepared separately
+            if (!initArrayBuffer(gl, 'a_Position', new Float32Array(positions), gl.FLOAT, 3)) return -1;
+            if (!initArrayBuffer(gl, 'a_Normal', new Float32Array(positions), gl.FLOAT, 3)) return -1;
 
+            // Unbind the buffer object
+            gl.bindBuffer(gl.ARRAY_BUFFER, null);
 
-            if (!initArrayBuffer(gl, 'a_Position', new Float32Array(positions), gl.FLOAT,3))
-                return -1
-            if (!initArrayBuffer(gl, 'a_Normal', new Float32Array(positions), gl.FLOAT,3))
-                return -1
-
-
-            gl.bindBuffer(gl.ARRAY_BUFFER, null)
-            var indexBuffer = gl.createBuffer()
+            // Write the indices to the buffer object
+            var indexBuffer = gl.createBuffer();
             if (!indexBuffer) {
-                console.log('Failed to create the buffer object')
-                return -1
+                console.log('Failed to create the buffer object');
+                return -1;
             }
-            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
-            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW)
-            return indices.length
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW);
+
+            return indices.length;
         }
 
-        function initArrayBuffer(gl, attribute, data, num, type) {
-            var buffer = gl.createBuffer()
+        function initArrayBuffer(gl, attribute, data, type, num) {
+            // Create a buffer object
+            var buffer = gl.createBuffer();
             if (!buffer) {
-                return false
+                console.log('Failed to create the buffer object');
+                return false;
             }
-            gl.bindBuffer(gl.ARRAY_BUFFER, buffer)
-            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW)
-
-            var a_attribute = gl.getAttribLocation(gl.program, attribute)
-
+            // Write date into the buffer object
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
+            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW);
+            // Assign the buffer object to the attribute variable
+            var a_attribute = gl.getAttribLocation(gl.program, attribute);
             if (a_attribute < 0) {
-                return false
+                console.log('Failed to get the storage location of ' + attribute);
+                return false;
             }
+            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0);
+            // Enable the assignment of the buffer object to the attribute variable
+            gl.enableVertexAttribArray(a_attribute);
 
-            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
+            gl.bindBuffer(gl.ARRAY_BUFFER, null);
 
-            gl.enableVertexAttribArray(a_attribute)
-
-            gl.bindBuffer( gl.ARRAY_BUFFER,null )
-
-            return true
-
+            return true;
         }
-
 
     </script>
 </body>
